// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block-serialization-spec-parser-js basic parsing parse() works properly 1`] = `
Array [
  Object {
    "attrs": Object {},
    "blockName": "core/more",
    "innerBlocks": Array [],
    "innerContent": Array [
      "<!--more-->",
    ],
    "innerHTML": "<!--more-->",
  },
]
`;

exports[`block-serialization-spec-parser-php basic parsing parse() works properly 1`] = `
Array [
  Object {
    "attrs": Array [],
    "blockName": "core/more",
    "innerBlocks": Array [],
    "innerContent": Array [
      "<!--more-->",
    ],
    "innerHTML": "<!--more-->",
  },
]
`;
